# smart-pac-client

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
public/: manifest.json
src/: App.css  App.tsx  Config.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: BottomTab.tsx  Home.tsx  TopNavBar.tsx
src/components/HostInfo/: index.tsx
src/components/HostList/: index.tsx  style.less
src/components/RuleInfo/: index.tsx
src/components/RuleList/: index.tsx  style.less
src/components/Settings/: index.tsx  style.less
src/utils/: api.ts  store.ts
